part 3/3.02/manifests/logoutput-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devopscourse
  name: logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutput
          image: artomulkahainen/logoutput:11
