part 3/3.02/manifests/logoutput-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devopscourse
  name: logoutput-service
spec:
  type: NodePort
  selector:
    app: logoutput
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
