part 3/3.02/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devopscourse
  name: pingpong-service
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - port: 3002
      protocol: TCP
      targetPort: 3002
